# cracking-the-coding-interview

./: .gitignore  CMakeLists.txt
Solutions/: CMakeLists.txt
Solutions/Array_String/1_1/: CMakeLists.txt  solution.c
Solutions/Array_String/1_2/: CMakeLists.txt  problem.txt  solution.c
Solutions/Array_String/1_3/: CMakeLists.txt  problem.txt  solution.c
Solutions/Array_String/1_4/: CMakeLists.txt  solution.c
